# cauldron

./: .gitignore  Cargo.toml  index.html  index.scss  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: categories.ts  data.rs  inventory.rs  item.rs  item_editor.rs  items.ts  main.rs  main_panel.rs  panels.rs  right_panel.rs  search.rs  stores.ts
src-data/: Cargo.toml
src-data/src/: inventory.rs  item.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: categories.rs  category.rs  data.rs  item.rs  items.rs  lib.rs  main.rs
src/lib/: Categories.svelte  DarkTheme.svelte  ItemEditor.svelte  ItemIcon.svelte  Items.svelte  LeftPanel.svelte  MainPanel.svelte  RightPanel.svelte
src/routes/: +page.svelte
