[package]
name = "cauldron-frontend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["src-tauri", "src-data"]

[dependencies]
cauldron-data = { path = "src-data" }

deref-derive = "0.1"
yew = { version = "0.20", features = ["csr"] }
garlic = { git = "https://github.com/ChangeCaps/garlic" }
sublime_fuzzy = "0.7"
tauri-invoke = { git = "https://github.com/ChangeCaps/tauri-invoke" }
wasm-bindgen = "0.2"
web-sys = "0.3"
